--- a/style.css
+++ b/style.css
@@ -20,9 +20,8 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: space-between;
-	gap: 10em;
-	padding: 2em 0;
+	justify-content: center;
+	gap: 2em;
 	background: var(--background);
 }
 img {
@@ -90,5 +89,8 @@ td.hide::after {
 	transition: all .2s ease;
 }
 td.hide:hover::after {
+	opacity: 0;
+}
+.op {
 	opacity: 0;
 }
