--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@
 body {
 	width: 100vw;
 	min-height: 100vh;
+}
+body {
+	width: 100vw;
+	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -28,14 +32,13 @@ img {
 	width: 100%;
 	aspect-ratio: 1/1;
 }
-table {
+section {
 	width: 37vw;
 	height: 37vw;
 	border-spacing: 0;
 	border-collapse: collapse;
 }
-
-tbody {
+div.containers {
 	width: 100%;
 	aspect-ratio: 1/1;
 	display: flex;
@@ -46,14 +49,14 @@ tbody {
 	background: var(--background);
 	border: 6mm ridge var(--border-dark);
 }
-tr {
+div>div.row {
 	width: 100%;
 	height: calc(100% / 8);
 	display: flex;
 	flex-direction: row;
 	flex-wrap: nowrap;
 }
-td {
+div.row>span {
 	width: calc(100% / 8);
 	display: flex;
 	flex-wrap: nowrap;
@@ -65,16 +68,16 @@ td {
 	position: relative;
 	cursor: pointer;
 }
-td.blue {
+span.blue {
 	color: var(--blue);
 }
-td.green {
+span.green {
 	color: var(--green);
 }
-td.red {
+span.red {
 	color: var(--red);
 }
-td.hide::after {
+span.hide::after {
 	content:"";
 	width: calc(100% - 12px);
 	height: calc(100% - 12px);
@@ -88,9 +91,6 @@ td.hide::after {
 	bottom: 0;
 	transition: all .2s ease;
 }
-td.hide:hover::after {
-	opacity: 0;
-}
-.op {
+span.hide:hover::after {
 	opacity: 0;
 }
